k8s/report/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report
  template:
    metadata:
      labels:
        app: report
    spec:
      containers:
      - name: report
        image: duynguyen21vnlp/ms-report:v1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
      imagePullSecrets:
      - name: regcred
        # ports:
        # - containerPort: 80
