k8s/report/service.yml
apiVersion: v1
kind: Service
metadata:
  name: report
spec:
  selector:
    app: report
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  internalTrafficPolicy: Local
