k8s/report/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: report-service
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: report
            port:
              number: 3000
